// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SetKeyFieldNamePanel existing list, given properties 1`] = `
<div>
  <div
    class="list__set-key-alert alert alert-info"
    role="alert"
  >
    <div>
      Select a key value for this list which uniquely identifies the item. You can use "
      Auto integer key
      " to define your own below.
    </div>
    <div
      class="list__set-key-panel row"
    >
      <div
        class="col-xs-3"
      >
        Key Field 
        <span
          class="domain-no-wrap"
        >
          Name
          <div
            class="overlay-trigger"
          >
            <span
              class="label-help-target"
            >
              <span
                class="label-help-icon fa fa-question-circle"
              />
            </span>
          </div>
           *
        </span>
      </div>
      <div
        class="col-xs-5"
      >
        <select
          class="form-control"
          name="keyField"
        >
          <option
            value="-1"
          >
            Auto integer key
          </option>
          <option
            value="0"
          >
            SubjectID
          </option>
          <option
            value="1"
          >
            Name
          </option>
          <option
            value="2"
          >
            Family
          </option>
          <option
            value="5"
          >
            Species
          </option>
          <option
            value="8"
          >
            MaritalStatus
          </option>
          <option
            value="9"
          >
            CurrentStatus
          </option>
          <option
            value="10"
          >
            Gender
          </option>
        </select>
      </div>
    </div>
  </div>
</div>
`;

exports[`SetKeyFieldNamePanel list with auto integer key 1`] = `
<div>
  <div
    class="list__set-key-alert alert alert-info"
    role="alert"
  >
    <div>
      Select a key value for this list which uniquely identifies the item. You can use "
      Auto integer key
      " to define your own below.
    </div>
    <div
      class="list__set-key-panel row"
    >
      <div
        class="col-xs-3"
      >
        Key Field 
        <span
          class="domain-no-wrap"
        >
          Name
          <div
            class="overlay-trigger"
          >
            <span
              class="label-help-target"
            >
              <span
                class="label-help-icon fa fa-question-circle"
              />
            </span>
          </div>
           *
        </span>
      </div>
      <div
        class="col-xs-5"
      >
        <select
          class="form-control"
          name="keyField"
        >
          <option
            value="-1"
          >
            Auto integer key
          </option>
          <option
            value="0"
          >
            SubjectID
          </option>
          <option
            value="1"
          >
            Name
          </option>
          <option
            value="2"
          >
            Family
          </option>
          <option
            value="5"
          >
            Species
          </option>
          <option
            value="8"
          >
            MaritalStatus
          </option>
          <option
            value="9"
          >
            CurrentStatus
          </option>
          <option
            value="10"
          >
            Gender
          </option>
        </select>
      </div>
    </div>
  </div>
</div>
`;

exports[`SetKeyFieldNamePanel new list, default properties 1`] = `
<div>
  <div
    class="list__set-key-alert alert alert-info"
    role="alert"
  >
    <div>
      Select a key value for this list which uniquely identifies the item. You can use "
      Auto integer key
      " to define your own below.
    </div>
    <div
      class="list__set-key-panel row"
    >
      <div
        class="col-xs-3"
      >
        Key Field 
        <span
          class="domain-no-wrap"
        >
          Name
          <div
            class="overlay-trigger"
          >
            <span
              class="label-help-target"
            >
              <span
                class="label-help-icon fa fa-question-circle"
              />
            </span>
          </div>
           *
        </span>
      </div>
      <div
        class="col-xs-5"
      >
        <select
          class="form-control"
          name="keyField"
        >
          <option>
            Select a field from the list
          </option>
          <option
            value="-1"
          >
            Auto integer key
          </option>
        </select>
      </div>
    </div>
  </div>
</div>
`;
